--- a/resources/xinha/plugins/Equation/example.html
+++ b/resources/xinha/plugins/Equation/example.html
@@ -38,7 +38,7 @@
 <p>
  ASCIIMathML by <a href="http://www.chapman.edu/~jipsen" target="new">Peter Jipsen</a>, 
 <a href="http://www.chapman.edu" target="new">Chapman University</a><br />
-  For more information on AsciiMathML visit this page: <a href="http://www1.chapman.edu/~jipsen/mathml/asciimath.html" onclick="window.open(this.href,'_blank','');return false;">http://www1.chapman.edu/~jipsen/mathml/asciimath.html</a></td></tr>
+  For more information on AsciiMathML visit this page: <a href="http://www1.chapman.edu/~jipsen/mathml/asciimath.html" onclick="window.open(this.href,'_blank','');return false;">http://www1.chapman.edu/~jipsen/mathml/asciimath.html</a>
 
 </p>
 </html>
